# autonomous-drone

./: .gitignore  AndroidManifest.xml  DroneGpsReceiver.kt  DroneViewModel.kt  MainActivity.kt  README.md  aliases.json  build.gradle  folders.json  sdkconfig.old
.github/workflows/: build-pdf.yml  firmware-smoke.yml  mobile-smoke.yml
Drone tests/: README.md
documentation/: Demo_Outline.md  Group 3 Draft Design Document.md  Parts Information - Parts List.csv  main.tex  need-goal.md  test-documentation-gps-stage-a.md  test-plan.md  test_plan.md
documentation/markdown/: 10_GPS_Telemetry.md  11_Communication_Protocol.md  12_Mobile_App_Architecture.md  13_Developer_Onboarding.md  14_Dual_BLE_WiFi_Demo.md  15_Camera Integration.md  16_Server Infrastructure.md  1_Executive_Summary.md  2_Table_of_Contents.md  3_Introduction.md  4_Design.md  5_Evaluation.md  6_Appendix_1.md  7_Appendix_2.md  8_Appendix_3.md  9_Appendix_4.md
documentation/presentation/: cameron_flight_control_section.md
drone_ble/: BLE_PROTOCOL_MOBILE.md  README.md
drone_ble/main/: CMakeLists.txt  bleprph.h  gatt_svr.c  main.c  motor.c  motor_test.c
drone_wifi/: README.md
drone_wifi/softAP/main/: CMakeLists.txt  softap_example_main.c
flight_control/: README.md  sdkconfig.defaults
flight_control/main/: CMakeLists.txt  Kconfig.projbuild  ble_command.c  ble_command.h  icm42670p.c  icm42670p.h  idf_component.yml  main.c  main_imu_test.c  main_motor_test.c  motor.c  motor.h  pid.c  pid.h
flight_sim/: CMakeLists.txt  README.md  sdkconfig.defaults
flight_sim/bridge/: bridge.py
flight_sim/main/: CMakeLists.txt  hil_link.c  hil_link.h  main.c  pid.c  pid.h
gps_bringup/: CMakeLists.txt  README.md
gps_bringup/main/: CMakeLists.txt  board_config.h  compass_mag.c  compass_mag.h  gps_nmea.c  gps_nmea.h  main.c
initial_mobile_code/: app.json  package-lock.json  package.json
initial_mobile_code/src/comms/: mock.ts  (+1 more)
mobile/: IOS_CLOUD_BUILD.md  README.md  android-build-shortpath.bat  app.json  eas.json  jest.config.js  package-lock.json  package.json  tsconfig.json
mobile/__tests__/: hybrid-comms.test.ts  smoke.test.ts  telemetry-parse.test.ts  wifi-comms.test.ts
mobile/docs/: litewing-pairing.md
mobile/plugins/: withDroneWifiTlsAndroid.js
motor_tests/: README.md
motor_tests/main/: CMakeLists.txt  main.c  motor.c  motor.h
old_motor_code/main/: CMakeLists.txt  main.c  motor.c  motor.h
server/: README.md  main.py  requirements.txt  test_main.py
server_update/: CMakeLists.txt  README.md  app_config.h  app_main.c  attitude.c  attitude.h  flight_task.c  flight_task.h  imu.c  imu.h  mixer.c  mixer.h  motors.c  motors.h  partitions.csv  pid.c  pid.h  sdkconfig.defaults  wifi_link.c  wifi_link.h
server_update2/: CMakeLists.txt  README.md
server_update2/main/: CMakeLists.txt  app_main.c
wifi_gps_softap/: BLE_PROTOCOL_MOBILE.md  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
wifi_gps_softap/main/: CMakeLists.txt  Kconfig.projbuild  ble_misc.c  ble_stack.c  bleprph.h  bmp280_baro.c  bmp280_baro.h  connect_banner.c  connect_banner.h  demo_takeoff.c  demo_takeoff.h  gatt_svr.c  motor.h  motor_stub.c  motor_tick_task.c  softap_gps_main.c  wifi_credentials.c  wifi_credentials.h  wifi_gps_ble.h  wifi_provision_http.c  wifi_provision_http.h  wifi_softap.c  wifi_softap.h
wifi_gps_softap/main/certs/: prvkey.pem  servercert.pem
(+60 files in other folders)
