idf_component_register(
    SRCS
        "softap_gps_main.c"
        "wifi_credentials.c"
        "wifi_softap.c"
        "wifi_provision_http.c"
        "ble_stack.c"
        "ble_misc.c"
        "motor_stub.c"
        "bmp280_baro.c"
        "../../gps_bringup/main/gps_nmea.c"
        "../../gps_bringup/main/compass_mag.c"
        "../../drone_ble/main/gatt_svr.c"
    PRIV_REQUIRES
        esp_wifi
        nvs_flash
        esp_http_server
        esp_https_server
        esp_driver_gpio
        esp_driver_uart
        esp_driver_i2c
        freertos
        log
        bt
        esp_timer
        mbedtls
    INCLUDE_DIRS
        "."
        "../../gps_bringup/main"
        "../../drone_ble/main"
    EMBED_TXTFILES
        "certs/servercert.pem"
        "certs/prvkey.pem"
)
