idf_component_register(
    SRCS
        "softap_gps_main.c"
        "ble_stack.c"
        "ble_misc.c"
        "gatt_svr.c"
        "motor_stub.c"
        "bmp280_baro.c"
        "../../gps_bringup/main/gps_nmea.c"
        "../../gps_bringup/main/compass_mag.c"
    PRIV_REQUIRES
        esp_wifi
        nvs_flash
        esp_http_server
        esp_https_server
        esp_driver_gpio
        esp_driver_uart
        esp_driver_i2c
        freertos
        log
        bt
        esp_timer
        mbedtls
    INCLUDE_DIRS
        "."
        "../../gps_bringup/main"
    EMBED_TXTFILES
        "certs/servercert.pem"
        "certs/prvkey.pem"
)
